examples/test/testpolicy14380.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14380
  namespace: namespace302
spec:
  podSelector:
    matchLabels:
      key34: value42
      key44: value21
      key0: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value42
          key34: value43
          key9: value41
      podSelector:
        matchLabels:
          key45: value0
